--- a/index.html
+++ b/index.html
@@ -6,19 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <div
-  id="botcopy-embedder-d7lcfheammjct"
-  class="botcopy-embedder-d7lcfheammjct" 
-  data-botId="68c2ec57c3f8c4d5ded12497"
-  >
-    <script type="text/javascript">
-      var s = document.createElement('script'); 
-      s.type = 'text/javascript'; s.async = true; 
-      s.src = 'https://widget.botcopy.com/js/injection.js'; 
-      document.getElementById('botcopy-embedder-d7lcfheammjct').appendChild(s);
-    </script>
-  </div>
   <body>
+    <!-- Botcopy embed (moved inside <body>) -->
+    <div
+      id="botcopy-embedder-d7lcfheammjct"
+      class="botcopy-embedder-d7lcfheammjct"
+      data-botId="68c2ec57c3f8c4d5ded12497"
+    >
+      <script type="text/javascript">
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'https://widget.botcopy.com/js/injection.js';
+        document.getElementById('botcopy-embedder-d7lcfheammjct').appendChild(s);
+      </script>
+    </div>
+
+    <!-- Persistence script: injects/loads is_new_user boolean -->
+    <script>
+      (function () {
+        const STORAGE_KEY = 'demo.is_new_user';
+
+        // Ensure default = true on first visit
+        if (localStorage.getItem(STORAGE_KEY) === null) {
+          localStorage.setItem(STORAGE_KEY, JSON.stringify(true));
+        }
+
+        // Botcopy queue shim (safe before widget is fully ready)
+        window.Botcopy = window.Botcopy || {};
+        const q = (window.__bcq = window.__bcq || []);
+        Botcopy.on = function (evt, fn) { q.push([evt, fn]); };
+
+        // On widget ready, send stored value silently to DF session
+        Botcopy.on('ready', function () {
+          try {
+            const stored = JSON.parse(localStorage.getItem(STORAGE_KEY) || 'true');
+            (Botcopy.send || Botcopy.sendMessage)?.({
+              message: {
+                type: 'training',
+                command: 'load_is_new_user',
+                parameters: { is_new_user: stored }
+              }
+            });
+          } catch (e) {
+            console.warn('Failed to load is_new_user', e);
+          }
+        });
+
+        // Listen for the bot’s command to update persistence (when you flip to false)
+        Botcopy.on('action', function (payload) {
+          try {
+            const msg = payload?.training || payload?.message || payload?.action?.message;
+            if (msg?.type === 'training' && msg?.command === 'set_is_new_user') {
+              const val = !!msg?.parameters?.is_new_user;
+              localStorage.setItem(STORAGE_KEY, JSON.stringify(val));
+            }
+          } catch (e) {
+            console.warn('Failed to persist is_new_user', e);
+          }
+        });
+      })();
+    </script>
+
+    <!-- Your React app -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
