--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       class="botcopy-embedder-d7lcfheammjct"
       data-botId="68c2ec57c3f8c4d5ded12497"
     >
-      <script type="text/javascript">
+      <script>
         var s = document.createElement('script');
         s.type = 'text/javascript';
         s.async = true;
@@ -22,15 +22,10 @@
       </script>
     </div>
 
-    <!-- Persistence: inject into EVERY outbound request + safe coercion -->
+    <!-- Persistence: inject into EVERY outbound request + safe coercion + debug -->
     <script>
       (function () {
         const STORAGE_KEY = 'demo.is_new_user';
-
-        // Default to true on first visit
-        if (localStorage.getItem(STORAGE_KEY) === null) {
-          localStorage.setItem(STORAGE_KEY, JSON.stringify(true));
-        }
 
         // Coerce anything ("false"/"true", 0/1) -> boolean
         function toBool(v) {
@@ -40,52 +35,69 @@
           return Boolean(v);
         }
 
-        // Botcopy event queue shim (safe before widget loads)
-        window.Botcopy = window.Botcopy || {};
-        const q = (window.__bcq = window.__bcq || []);
-        Botcopy.on = function (evt, fn) { q.push([evt, fn]); };
+        // Ensure default key exists and log it
+        try {
+          if (localStorage.getItem(STORAGE_KEY) === null) {
+            localStorage.setItem(STORAGE_KEY, JSON.stringify(true));
+            console.log('[persist:init] created', STORAGE_KEY, '→', true);
+          } else {
+            console.log('[persist:init] found', STORAGE_KEY, '→', JSON.parse(localStorage.getItem(STORAGE_KEY)));
+          }
+        } catch (e) {
+          console.warn('[persist:init] localStorage unavailable', e);
+        }
 
-        // 🔑 Inject into EVERY outbound request (covers "Clear history" new sessions)
+        // Botcopy event queue shim (don’t overwrite if SDK already defined .on)
+        window.Botcopy = window.Botcopy || {};
+        if (typeof window.Botcopy.on !== 'function') {
+          const q = (window.__bcq = window.__bcq || []);
+          window.Botcopy.on = function (evt, fn) { q.push([evt, fn]); };
+        }
+
+        // Inject is_new_user into EVERY outbound request (covers "Clear history" new sessions)
         Botcopy.on('pre_request', function (req) {
           try {
             const stored = toBool(JSON.parse(localStorage.getItem(STORAGE_KEY) || 'true'));
 
-            // Attach to params seen by CX as session params
+            // Attach to params (DF CX sees these as session params)
             req.parameters = req.parameters || {};
             req.parameters.is_new_user = stored;
 
-            // Some builds also read payload.parameters
+            // Some SDK builds also pass via payload.parameters
             if (req.payload) {
               req.payload.parameters = req.payload.parameters || {};
               req.payload.parameters.is_new_user = stored;
             }
 
-            console.debug('[pre_request] injecting is_new_user =', stored);
+            console.log('[pre_request] is_new_user →', stored);
           } catch (e) {
-            console.warn('pre_request inject failed', e);
+            console.warn('[pre_request] inject failed', e);
           }
         });
 
-        // Persist flips from the bot and reflect into this live session
+        // Persist flips from the bot; DO NOT echo immediately (avoids MobX race)
         Botcopy.on('action', function (payload) {
           try {
-            const msg = payload?.training || payload?.message || payload?.action?.message;
-            if (msg?.type === 'training' && msg?.command === 'set_is_new_user') {
-              const val = toBool(msg?.parameters?.is_new_user);
+            const m = payload?.training || payload?.message || payload?.action?.message;
+            if (m?.type === 'training' && m?.command === 'set_is_new_user') {
+              const val = toBool(m?.parameters?.is_new_user);
               localStorage.setItem(STORAGE_KEY, JSON.stringify(val));
-              console.debug('[persist] set is_new_user =', val);
+              console.log('[persist] set is_new_user =', val);
 
-              // Optional: echo into current session immediately
-              (Botcopy.send || Botcopy.sendMessage)?.({
-                message: {
-                  type: 'training',
-                  command: 'load_is_new_user',
-                  parameters: { is_new_user: val }
-                }
-              });
+              // If you want to reflect into the live session, defer slightly:
+              // setTimeout(() => {
+              //   (Botcopy.send || Botcopy.sendMessage)?.({
+              //     message: {
+              //       type: 'training',
+              //       command: 'load_is_new_user',
+              //       parameters: { is_new_user: val }
+              //     }
+              //   });
+              //   console.log('[persist] echoed load_is_new_user after defer');
+              // }, 120);
             }
           } catch (e) {
-            console.warn('action handler error', e);
+            console.warn('[action] handler error', e);
           }
         });
       })();
